Long string overflow resolved by removing popover max-width property

--- a/app/javascript/react/screens/App/Plan/Plan.scss
+++ b/app/javascript/react/screens/App/Plan/Plan.scss
@@ -30,3 +30,7 @@
 .task-info-popover .popover-title {
   text-transform: capitalize;
 }
+
+.no-max-width {
+  max-width: none;
+}
